# libusbnet

./: .gitignore  CMakeLists.txt  ChangeLog  FUNCTIONS  README  SSH_HOWTO
cmake/: Doxygen.cmake  FindUSB.cmake  UninstallTarget.cmake.in
doc/: Doxyfile.in  page.doxy.h
src/: CMakeLists.txt  common.h  usbnet.c  usbnet.h  usbproto.h
src/client/: CMakeLists.txt  clientsocket.cpp  clientsocket.hpp  usbnet.cpp
src/clientserver/: CMakeLists.txt  serversocket.cpp  socket.cpp  socket.hpp  usbexportd.cpp
src/proto/: CMakeLists.txt  protobase.c  protobase.h  protocol.c  protocol.cpp  protocol.h  protocol.hpp  socket.cpp  socket.hpp
src/server/: CMakeLists.txt  serversocket.cpp  serversocket.hpp  socket.cpp  usbexportd.cpp  usbservice.cpp  usbservice.hpp
src/shared/: cmdflags.cpp  cmdflags.hpp  common.c  common.h  protocol.c  protocol.cpp  protocol.h  protocol.hpp  socket.cpp
